# mimosa

./: .gitignore  404.html  BUILDPIP.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  environment.yml  index.html  mkdocs.yml  mkdocs_hooks.py  new_no_net_negs.py  no_net_negs_damage_target.py  pyproject.toml  pytest.ini  requirements.txt  resultaten_long_format.csv  resultaten_wide_format.csv  run.py  run_accreu.py  run_baseline.py  run_calibration.py  run_scc.py  setup.py  simulation.py  sitemap.xml  utility_fct.json  versions.json
.github/workflows/: ci.yaml  ci.yml  test-documentation.yml  test-install.yml  test-optimisation.yml
0.2.6/: 404.html  index.html  objects.inv  sitemap.xml
0.2.6/assets/: extra.css
0.2.6/components/: index.html
0.2.6/extending/: index.html
0.2.6/installation/: index.html
0.2.6/parameters/: index.html
0.2.6/run/: index.html
1.3.0/: 404.html  index.html  sitemap.xml
1.3.1/: 404.html  index.html  objects.inv  sitemap.xml
assets/: extra.css
components/: index.html
course_materials/: Assignment_4_MIMOSA_Draft.md
docs/: extending_mimosa.md  index.md  installation.md  parameters.md  run.md  usage.md
extending/: index.html
extending_mimosa/: index.html
input/: config.yaml  config_IMAGE.yaml  regional_data.py  units.txt
installation/: index.html
mimosa/: __init__.py  abstract_model.py  all_constraints.py  base_model.py  mimosa.py
model/: __init__.py  abstract_model.py  main.py  main_gekko.py  mimosa.py
parameters/: index.html
run/: index.html
scripts/: mkdocs_hooks.py
search/: search_index.json
(+467 files in other folders)
